--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.16",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jspdf": "^2.5.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
